--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,10 +78,11 @@
         app:layout_constraintTop_toBottomOf="@+id/Login_button" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/apply_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:onClick="apply"
         android:text="申請帳號"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:backgroundTint="@android:color/darker_gray"
